fix css overflow

--- a/main.css
+++ b/main.css
@@ -18,11 +18,10 @@ div {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-o-user-select: none;
-	
 	user-select: none;
 	
+	position: absolute;
 	margin: 0px;
-
 	overflow: hidden;
 }
 
@@ -41,6 +40,7 @@ div.Stage {
 
 
 div.Flippable {
+	overflow: visible;
 	perspective: 1000px;
 	background-color: rgba(0,0,0,0.0) !important;
 }
@@ -54,14 +54,12 @@ div.Flippable>.Wrapper {
 	transform-style: preserve-3d;
 }
 div.Flippable>.Wrapper>.Front {
-	position: absolute;
 	width: 100%;
 	height: 100%;
 	backface-visibility: hidden;
 	-webkit-backface-visibility: hidden;
 }
 div.Flippable>.Wrapper>.Back {
-	position: absolute;
 	width: 100%;
 	height: 100%;
 	backface-visibility: hidden;
